LibWeb: WIP Serialize ArrayBuffer

--- a/Tests/LibWeb/Text/input/HTML/StructuredClone-object-primitives.html
+++ b/Tests/LibWeb/Text/input/HTML/StructuredClone-object-primitives.html
@@ -7,5 +7,6 @@
         println(structuredClone(new Number(123.456)));
         println(structuredClone(new String("This is a String object")));
         println(structuredClone(Date.UTC(2023, 7, 23)));
+        println(structuredClone(Uint8Array.of(1, 2, 3, 4, 5)));
     });
 </script>
